# nextcloud-operator-rs

./: .gitignore  Cargo.toml  Makefile  README.md  nextcloud-example.yaml  nextcloud.yaml
containers/nginx/: Containerfile
containers/nginx/files/: coolwsd.conf  nextcloud_nginx.conf  notify_push.service.j2  notify_push_environment  php.ini.j2  s3.j2  www.conf.j2
containers/php-fpm/: Containerfile  Containerfile-debug
containers/php-fpm/files/: www.conf
src/: constants.rs  crd.rs  element.rs  error.rs  finalizer.rs  ingress.rs  main.rs  nextcloud.rs
utils/: create_php_configmap.sh  create_registry_secret.sh  delete_pod.sh  enter_pod.sh  install_nginx_ingress_controller.sh
