[package]
name = "nextcloud"
version = "0.1.0"
authors = ["Iván Chavero <ichavero@chavero.com.mx>"]
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "0.88.1", default-features = true, features = [
    "derive",
    "runtime",
    "ws",
] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.21", default-features = false, features = [
    "v1_26",
] } # Kube-rs depends on k8s-openapi
futures = "0.3"
log = "0.4.20"     # A lightweight logging facade for Rust
#env_logger = "0.11.2"             # A logging implementation for `log` which is configured via an environment variable.
pretty_env_logger = "0.5.0"

# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"    # Custom Error definitions and convenient error mappings
crypto = "0.5.1"
sha2 = "0.10.8"
indoc = "2.0.4"
tokio-util = "0.7.10"
